fixed the width of notebooks, on mobile rendering was off

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -22,7 +22,7 @@
 }
 
 .post-notebook {
-  width: 1000px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
